--- a/public/index.html
+++ b/public/index.html
@@ -39,17 +39,16 @@
             <br>
 
             <form method="POST" action="/users/verify" class="col-12" id="logInForm">
-                <input id="usernameInput" name="username" placeholder="Username">
-                <br>
-                <input id="passwordInput" type="password" name="password" placeholder="Password">
-                <br>
+                <input onClick="clearErrors()" id="usernameInput" name="username" placeholder="Username">
+                <p id="userNameError"></p>
+                <input onClick="clearErrors()" id="passwordInput" type="password" name="password" placeholder="Password">
+                <p id="passwordError"></p>
                 <button type="submit"><img id="logInButtonLoginPage" src="logInButtonLoginPage.png"></button>
                 <br>
             </form>
 
             <div class="row" id="signUpAndHelpDiv">
                 <button data-target="#signupModal" data-toggle="modal" id="signUpButton" class="col-6 row">Sign Up</button>
-                <button id="signUpButton" data-target="#signupModal" data-toggle="modal" class="col-6 row">Sign Up</button>
                 <button id="signInHelp" class="col-6 row">Login Help</button>
             </div>
         </div>
@@ -132,12 +131,23 @@
         crossorigin="anonymous"></script>
 
 
-    <script>  
+    <script>
+
+        function clearErrors(){
+            $("#passwordError").text('');
+            $("#userNameError").text('');
+        }
+
         let logInStatusArray=document.cookie.slice(document.cookie.length-14).split('=')
-        console.log(logInStatusArray);
+
         if(logInStatusArray[1]=='true'){
             window.location = '/dashboard.html'
+        } else if(logInStatusArray[1]=='1001'){
+            $("#passwordError").text('Incorrect Password')
+        } else if(logInStatusArray[1]=='2002'){
+            $("#userNameError").text('Username Not Found')
         }
+
     </script>
 </body>
 
