working statistics tab with data insertion

--- a/public/index.html
+++ b/public/index.html
@@ -138,13 +138,13 @@
             $("#userNameError").text('');
         }
 
-        let logInStatusArray=document.cookie.slice(document.cookie.length-14).split('=')
-
-        if(logInStatusArray[1]=='true'){
+        let logInStatusArray=document.cookie.split(/[\s=;]/)
+        let indexOf = logInStatusArray.indexOf('loggedIn');
+        if(logInStatusArray[indexOf+1]=='true'){
             window.location = '/dashboard.html'
-        } else if(logInStatusArray[1]=='1001'){
+        } else if(logInStatusArray[indexOf+1]=='Incorrect_Password'){
             $("#passwordError").text('Incorrect Password')
-        } else if(logInStatusArray[1]=='2002'){
+        } else if(logInStatusArray[indexOf+1]=='Username_Error'){
             $("#userNameError").text('Username Not Found')
         }
 
