--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
 
-    <!-- CUSTOM CSS -->
+    <!-- CUSTOM CSS & JS -->
 
     <link href="main.css" rel="stylesheet">
 
@@ -65,7 +65,7 @@
             </div>
             <div id="myStatsDiv">
                 <div class="col-12 well">
-                    <img src="MyStatsButton.png" onClick="getScorecards()" id="myStatsButtonImage" data-toggle="modal" data-target="#statistics" type="button">
+                    <img src="MyStatsButton.png" onClick="getStatistics()" id="myStatsButtonImage" data-toggle="modal" data-target="#statistics" type="button">
                 </div>
             </div>
             <div id="myProfileButtonDiv">
@@ -199,7 +199,6 @@
         </div>
     </div>
 
-
     <!-- BOOTSTRAP SCRIPTS -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -211,28 +210,38 @@
 
     <script>
 
-        function getScorecards(){
+        function logOut(){
+            document.cookie = 'loggedIn=false'
+            window.location = '/index.html'
+        }
+
+        function getStatistics(){
             let itemArray = document.cookie.split(/[\s=;]/)
             let indexOf = itemArray.indexOf('currentUser');
             let currentUser = itemArray[indexOf+1];
-            console.log("inside get scorecards, currentUser is : " + currentUser)
-            fetch('/scorecards/get', {
+            fetch('/statistics/get', {
                 method: "POST",
                 headers: {"Content-Type":"application/json"},
                 body: JSON.stringify({"userName": currentUser})
             }).then(response => response.json())
-                .then(objects => updateStatistics(objects))
+                .then(objects => showStatistics(objects))
         }
 
-        function updateStatistics(objects){
-            console.log(objects);
-            console.log("We're cooking now!")
-            //THIS IS WHERE I NEED TO START TOMORROW//
-        }
-
-        function logOut(){
-            document.cookie = 'loggedIn=false'
-            window.location = '/index.html'
+        function showStatistics(myStatistics){
+            $('#roundsPlayed').text('Number of Rounds Played: ' + myStatistics.roundsPlayed +' rounds')
+            $('#overallParAverage').text('Average Over Par: ' + myStatistics.averageComparedToPar )
+            $('#parThreeAverage').text('Par 3 Average score: ' + myStatistics.parThreeScoring)
+            $('#parFourAverage').text('Par 4 Average score: ' + myStatistics.parFourScoring)
+            $('#parFiveAverage').text('Par 5 Average scoore: ' + myStatistics.parFiveScoring)
+            $('#upAndDown').text('Up and Down: ' + myStatistics.upDown +"%")
+            $('#overallPutts').text('Average Number of Putts:  ' + myStatistics.averageNumberOfPutts)
+            $('#overallFairways').text('Fairway %: ' + myStatistics.fairwaysPercentage)
+            $('#missedFairwayConvert').text('Scramble %: ' + myStatistics.missedFairwaysPar)
+            $('#hitFairwayConvert').text('Hit Fairway & Par: ' + myStatistics.hitFairwaysPar + '%')
+            $('#overallGIR').text('Greens in Regulation: ' + myStatistics.fairwaysPercentage + '%')
+            $('#parThreeGIR').text('Par three GIR: ' + myStatistics.parThreeG + '%')
+            $('#parFourGIR').text('Par four GIR: ' + myStatistics.parFourG + '%')
+            $('#parFiveGIR').text('Par five GIR: ' + myStatistics.parFiveG + '%')
         }
 
         function storeCookie(object){
