--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -66,18 +66,18 @@
                 </div>
             </div>
             <div id="myStatsDiv">
-                <div class="col-12 well">
+                <div class="col-12 well" onClick="getStatistics()">
 
-                        <svg xmlns="http://www.w3.org/2000/svg" class="equilizer" viewBox="0 0 128 128" id="equalizer">
+                        <!-- <svg xmlns="http://www.w3.org/2000/svg" class="equilizer" viewBox="0 0 128 128" id="equalizer">
                             <g>
                               <rect class="bar" transform="translate(0,0)" y="15"></rect>
                               <rect class="bar" transform="translate(25,0)" y="15"></rect>
                               <rect class="bar" transform="translate(50,0)" y="15"></rect>
                               <rect class="bar" transform="translate(75,0)" y="15"></rect>
                             </g>
-                          </svg>
+                          </svg> -->
                     
-                    <img src="MyStatsButtonAnimated.png" onClick="getStatistics()" id="myStatsButtonImage" data-toggle="modal" data-target="#statistics" type="button">
+                    <img src="MyStatsButtonAnimated.png" id="myStatsButtonImage" data-toggle="modal" data-target="#statistics" type="button">
 
                 </div>
             </div>
@@ -274,6 +274,7 @@
         }
 
         function getStatistics(){
+            console.log('in getStatistics');
             let itemArray = document.cookie.split(/[\s=;]/)
             let indexOf = itemArray.indexOf('currentUser');
             let currentUser = itemArray[indexOf+1];
@@ -295,7 +296,7 @@
             $('#overallPutts').text('Average Number of Putts:  ' + myStatistics.averageNumberOfPutts)
             $('#overallFairways').text('Fairway %: ' + myStatistics.fairwaysPercentage)
             $('#missedFairwayConvert').text('Scramble %: ' + myStatistics.missedFairwaysPar)
-            $('#hitFairwayConvert').text('Hit Fairway & Par: ' + myStatistics.hitFairwaysPar + '%')
+            $('#hitFairwayConvert').text('Hit Fairway Par: ' + myStatistics.hitFairwaysPar + '%')
             $('#overallGIR').text('Greens in Regulation: ' + myStatistics.fairwaysPercentage + '%')
             $('#parThreeGIR').text('Par three GIR: ' + myStatistics.parThreeG + '%')
             $('#parFourGIR').text('Par four GIR: ' + myStatistics.parFourG + '%')
